--- a/XMLParse/XMLParse/pom.xml
+++ b/XMLParse/XMLParse/pom.xml
@@ -25,10 +25,13 @@
       <groupId>dom4j</groupId>    
       <artifactId>dom4j</artifactId>    
       <version>1.6</version>   
-    </dependency> 
-    
-    
-    
+    </dependency>
+     
+	<dependency>
+	    <groupId>sax</groupId>
+	    <artifactId>sax</artifactId>
+	    <version>2.0.1</version>
+	</dependency>
     
   </dependencies>
 </project>
